turn titles of pages to original

--- a/change-hotel-password.html
+++ b/change-hotel-password.html
@@ -9,17 +9,11 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/hotel-room.css">
-    <link rel="stylesheet" href="css/info/hotel-guest.css">
-    <style>
-        #sections{
-            padding-top: 40px !important;
-            text-align: left;
-        }
-    </style>
-
+    <link rel="stylesheet" href="css/info/forget-pass.css">
 </head>
 <body>
+
+
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -46,11 +40,11 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="hotel-guest.html">English</a>
+                        <a class="lang-text" href="change-hotel-password.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="تقرير%20النزلاء.html">Arabic</a>
+                            <a class="lang-text" href="تغيير%20الباسورد.html">Arabic</a>
                         </div>
 
                     </div>
@@ -59,7 +53,7 @@
                     <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">Sign in</a>
+                    <a  href="sign-in.html">Sign in</a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -111,15 +105,16 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="hotel-guest.html">English</a>
+                            <a class="lang-text" href="change-hotel-password.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="تقرير%20النزلاء.html">Arabic</a>
+                                <a class="lang-text" href="تغيير%20الباسورد.html">Arabic</a>
                             </div>
 
                         </div>
                     </div>
+
                 </div>
 
                 <!--          text-second-logo  -->
@@ -142,7 +137,7 @@
                 <a  href="register-new-guest.html">Register New Guest</a>
             </div>
             <div class="sign btn">
-                <a  href="index.html">Sign in</a>
+                <a  href="sign-in.html">Sign in</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -166,7 +161,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest.html">
+                <a href="my-hotel-guests-report.html">
 
 
                     My Hotel Guests Report
@@ -177,7 +172,7 @@
             </li>
 
             <li>
-                <a href="cities.html">
+                <a href="hotel-cities-report.html">
 
 
                     Hotel Cities Report
@@ -187,7 +182,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms.html">
+                <a href="hotel-rooms-report.html">
 
 
                     Hotel Rooms Report
@@ -247,7 +242,7 @@
             </li>
 
             <li>
-                <a href="chnage-pass.html">
+                <a href="change-hotel-password.html">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
@@ -286,117 +281,50 @@
 </section>
 <!-- end of nav-->
 <!-- start of form-->
+
+<!-- end of nav-->
 <section id="sections-hotel">
     <div class="container">
         <div class="section-back">
-            <a href="about-us.html">Back to Hotel  Sections </a>
+            <a href="hotel-sections.html">Back to Hotel  Sections</a>
         </div>
     </div>
     <div class="container">
         <div class="hotel-info">
-            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+            >
                 <a href="#">
-                  My Hotel Guests Report
+                   Change Hotel password
                 </a>
             </h3>
 
         </div>
     </div>
-
 </section>
-<!-- end of form -->
-<!-- end of nav-->
-<!-- Table -->
-<section class="hotel-guest">
-<div class="container">
-
-        <table>
-            <tr>
-                <th>#</th>
-                <th>Guest Name</th>
-                <th>Room number</th>
-                <th>Room open date</th>
-                <th>Guest Country</th>
-                <th>Guest phone</th>
-                <th>Guest Email</th>
-
-            </tr>
-            <tr>
-                <td>1</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+<!-- start of form-->
+<section id="form">
 
 
-            </tr>
-            <tr>
-                <td>2</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+    <div class="container">
 
-            </tr>
-            <tr>
-                <td>3</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>4</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>5</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>6</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>7</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-
-            </tr>
-
-        </table>
+        <form action="#" class="form">
+            <div class="form-group wow fadeInRight"  data-wow-duration="1s" >
+                <label for="number"></label>
+                <input type="password" class="form-control" id="number" placeholder="Enter Hotel Current  Password">
+            </div>
+            <div class="form-group wow fadeInRight"  data-wow-duration="3s">
+                <label for="password"></label>
+                <input type="password" class="form-control"  id="password" placeholder="Enter  new  password">
+            </div>
+            <div class="form-group wow fadeInRight"  data-wow-duration="4s">
+                <label for="passwordd"></label>
+                <input type="password" class="form-control"  id="passwordd" placeholder="Re-enter  new  password">
+            </div>
+            <button class="change wow fadeInRight"  data-wow-duration="6s"  >change Hotel password</button>
+        </form>
     </div>
 </section>
-<!--end of table -->
+<!-- end of form -->
 <footer>
     <div class="container">
         <div class="copyright">
