--- a/my-hotel-guests-report.html
+++ b/my-hotel-guests-report.html
@@ -7,16 +7,19 @@
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
     <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/datepicker.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/info/hotel-room.css">
-
-    <link rel="stylesheet" href="css/info/register-new-guest2.css">
+    <link rel="stylesheet" href="css/info/hotel-guest.css">
+    <style>
+        #sections{
+            padding-top: 40px !important;
+            text-align: left;
+        }
+    </style>
 
 </head>
 <body>
-
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -43,21 +46,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="register form.html">English</a>
+                        <a class="lang-text" href="my-hotel-guests-report.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="فورم%20تسجيل%20النزيل%20الجديد.html">Arabic</a>
+                            <a class="lang-text" href="تقرير%20النزلاء.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
-
                 <div class="register btn">
                     <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">Sign in</a>
+                    <a  href="sign-in.html">Sign in</a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -109,11 +111,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="register form.html">English</a>
+                            <a class="lang-text" href="my-hotel-guests-report.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="فورم%20تسجيل%20النزيل%20الجديد.html">Arabic</a>
+                                <a class="lang-text" href="تقرير%20النزلاء.html">Arabic</a>
                             </div>
 
                         </div>
@@ -140,7 +142,7 @@
                 <a  href="register-new-guest.html">Register New Guest</a>
             </div>
             <div class="sign btn">
-                <a  href="index.html">Sign in</a>
+                <a  href="sign-in.html">Sign in</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -164,7 +166,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest.html">
+                <a href="my-hotel-guests-report.html">
 
 
                     My Hotel Guests Report
@@ -175,7 +177,7 @@
             </li>
 
             <li>
-                <a href="cities.html">
+                <a href="hotel-cities-report.html">
 
 
                     Hotel Cities Report
@@ -185,7 +187,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms.html">
+                <a href="hotel-rooms-report.html">
 
 
                     Hotel Rooms Report
@@ -245,7 +247,7 @@
             </li>
 
             <li>
-                <a href="chnage-pass.html">
+                <a href="change-hotel-password.html">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
@@ -284,137 +286,117 @@
 </section>
 <!-- end of nav-->
 <!-- start of form-->
-<section id="form">
-    <div class="form-title">
-        <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
-        ><a href="#" >
-            Register New Guest
-        </a></h2>
-
-    </div>
-    <div class="form-title">
-
-        <p>
-            You Invited By Partner Hotel Number : <span>
-            1234567890
-        </span>
-        </p>
+<section id="sections-hotel">
+    <div class="container">
+        <div class="section-back">
+            <a href="hotel-sections.html">Back to Hotel  Sections </a>
+        </div>
     </div>
     <div class="container">
+        <div class="hotel-info">
+            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                <a href="#">
+                  My Hotel Guests Report
+                </a>
+            </h3>
 
-        <form action="#" class="form">
-            <div class="form-group" >
-                <label for="number"></label>
-                <input type="text" class="form-control" id="number" placeholder="enter your digital key " required>
-            </div>
-            <div class="form-group ">
-                <label for="password"></label>
-                <input type="password" class="form-control"  id="password" placeholder="make your hotel password " required>
-            </div>
-            <div class="form-group">
-                <label for="passwords"></label>
-                <input type="password" class="form-control"  id="passwords" placeholder="Re-Enter your hotel password" required>
-            </div>
-            <div class="form-group">
-                <label for="frist-name"></label>
-                <input type="text" class="form-control"  id="frist-name" placeholder="Enter your first name" required>
-            </div>
-            <div class="form-group">
-                <label for="middle"></label>
-                <input type="text" class="form-control"  id="middle" placeholder="Enter your middle name" required>
-            </div>
-            <div class="form-group">
-                <label for="last-name"></label>
-                <input type="text" class="form-control"  id="last-name" placeholder="Enter your last name" required>
-            </div>
-            <div class="form-group">
-                <label for="email"></label>
-                <input type="email" class="form-control"  id="email" placeholder="Enter your Email" required>
-            </div>
-            <div class="form-group">
-                <label for="phone"></label>
-                <input type="text" class="form-control"  id="phone" placeholder="Enter your Phone" required>
-            </div>
-
-            <div class="form-group">
-                <label for="country"></label>
-                <input type="text" class="form-control"  id="country" placeholder="Enter your Country or Region" required>
-            </div>
-            <div class="form-group" >
-                <div id="inline" data-date="01/05/2020" >
-                    <label for="datepicker"></label>
-                    <input type="text" id="datepicker" name="datepicker"  placeholder="Your Birth Date">
-                </div>
-
-            </div>
-            <div class="form-group checkbox-group">
-                <div class="checkbox">
-                    <input type="checkbox" name="male" required>
-                    <span>Gender \ Male</span>
-
-                </div>
-                <div class="checkbox">
-                    <input type="checkbox" name="female" required>
-                    <span>Gender \ Female</span>
-
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="options">
-                    <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collection" required>
-                        <option>Set your Goal(choose your dream)</option>
-                        <option > Buy A Car</option>
-                        <option >Buy A House</option>
-                        <option >Paying Off Debts</option>
-                        <option >Traveling Around The World</option>
-                        <option >Paying Education Costs</option>
-                        <option >Saving Marriage Costs</option>
-                        <option >Charitable Work</option>
-                        <option >Just For Saving Money</option>
-
-                    </select>
-                </div>
-
-            </div>
-            <div class="form-group">
-                <div class="options">
-                    <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collectio" required>
-                        <option >Set your Financial Goal</option>
-                        <option >$ 100</option>
-                        <option >$  1000</option>
-                        <option >$  30,000</option>
-                        <option >$ 40,000</option>
-                        <option >$ 50,000</option>
-                        <option >$ 300,000</option>
-                        <option >$ 1,000,000</option>
-                        <option >$ Open Limit</option>
-
-                    </select>
-                </div>
-
-            </div>
-            <div class="form-group checkbox-confirm">
-                <div class="checkbox">
-                    <input type="checkbox" name="video-confirm" required>
-                    <span>I watched Digital Hotel Explanation Video </span>
-
-                </div>
-                <div class="checkbox">
-                    <input type="checkbox" name="faq" required>
-                    <span>I Read FAQ Page </span>
-                </div>
-                <div class="checkbox">
-                    <input type="checkbox" name="terms" required>
-                    <span>I Agree For Digital Hotels <a href="https://www.pyramid-challenge.com/terms-conditions">Terms&Conditions</a></span>
-                </div>
-            </div>
-
-            <a href="registration-success-message.html" class="submit"  >Open Your Room </a>
-        </form>
+        </div>
     </div>
+
 </section>
 <!-- end of form -->
+<!-- end of nav-->
+<!-- Table -->
+<section class="hotel-guest">
+<div class="container">
+
+        <table>
+            <tr>
+                <th>#</th>
+                <th>Guest Name</th>
+                <th>Room number</th>
+                <th>Room open date</th>
+                <th>Guest Country</th>
+                <th>Guest phone</th>
+                <th>Guest Email</th>
+
+            </tr>
+            <tr>
+                <td>1</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>2</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>3</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>4</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>5</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>6</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>7</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+
+        </table>
+    </div>
+</section>
+<!--end of table -->
 <footer>
     <div class="container">
         <div class="copyright">
@@ -432,15 +414,7 @@
     </div>
 </footer>
 <script src="js/jquery.js"></script>
-<script src="js/datepicker-full.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/app.js"></script>
-<script>
-    const elem = document.querySelector('input[name="datepicker"]');
-    const datepicker = new Datepicker(elem, {
-        // options here
-        calendarWeeks: false,
-    });
-</script>
 </body>
 </html>
