--- a/registration-success-message.html
+++ b/registration-success-message.html
@@ -48,7 +48,7 @@
       </div>
 
 
-            <a  href="about-us.html" class="submit " >Go To Hotel Sections
+            <a href="hotel-sections.html" class="submit " >Go To Hotel Sections
                 <i class="fas fa-chevron-right"></i>
 </a>
 
