--- a/تقرير المدن الفندقية.html
+++ b/تقرير المدن الفندقية.html
@@ -46,7 +46,7 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="cities.html">English</a>
+                        <a class="lang-text" href="hotel-cities-report.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
@@ -118,7 +118,7 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="cities.html">English</a>
+                            <a class="lang-text" href="hotel-cities-report.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
@@ -338,7 +338,7 @@
 
 <div class="container">
     <div class="section-back">
-        <a href="about-us.html">Back to Sections</a>
+        <a href="hotel-sections.html">Back to Sections</a>
     </div>
     <div class="section-title">
         <h2><a href="#">
