--- a/business-commitment.html
+++ b/business-commitment.html
@@ -59,7 +59,7 @@
                     <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">Sign in</a>
+                    <a  href="sign-in.html">Sign in</a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -143,7 +143,7 @@
                 <a  href="register-new-guest.html">Register New Guest</a>
             </div>
             <div class="sign btn">
-                <a  href="index.html">Sign in</a>
+                <a  href="sign-in.html">Sign in</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -167,7 +167,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest.html">
+                <a href="my-hotel-guests-report.html">
 
 
                     My Hotel Guests Report
@@ -178,7 +178,7 @@
             </li>
 
             <li>
-                <a href="cities.html">
+                <a href="hotel-cities-report.html">
 
 
                     Hotel Cities Report
@@ -188,7 +188,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms.html">
+                <a href="hotel-rooms-report.html">
 
 
                     Hotel Rooms Report
@@ -248,7 +248,7 @@
             </li>
 
             <li>
-                <a href="chnage-pass.html">
+                <a href="change-hotel-password.html">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
@@ -291,7 +291,7 @@
 <section id="sections-hotel">
     <div class="container">
         <div class="section-back">
-            <a href="about-us.html">Back to Hotel  Sections</a>
+            <a href="hotel-sections.html">Back to Hotel  Sections</a>
         </div>
         <div class="section-title">
             <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
@@ -349,7 +349,7 @@
 
 <div class="container">
     <div class="section-back">
-        <a href="about-us.html">Back to Sections</a>
+        <a href="hotel-sections.html">Back to Sections</a>
     </div>
     <div class="section-title">
         <h2><a href="#">
