--- a/hotel-cities-report.html
+++ b/hotel-cities-report.html
@@ -9,11 +9,16 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/forget-pass.css">
+    <link rel="stylesheet" href="css/info/cities.css">
+    <style>
+        #sections{
+            padding-top: 40px !important;
+            text-align: left;
+        }
+    </style>
+
 </head>
 <body>
-
-
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -40,11 +45,11 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="chnage-pass.html">English</a>
+                        <a class="lang-text" href="hotel-cities-report.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="تغيير%20الباسورد.html">Arabic</a>
+                            <a class="lang-text" href="تقرير%20المدن%20الفندقية.html">Arabic</a>
                         </div>
 
                     </div>
@@ -53,7 +58,7 @@
                     <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">Sign in</a>
+                    <a  href="sign-in.html">Sign in</a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -103,18 +108,19 @@
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
+
+
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="chnage-pass.html">English</a>
+                            <a class="lang-text" href="hotel-cities-report.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="تغيير%20الباسورد.html">Arabic</a>
+                                <a class="lang-text" href="تقرير%20المدن%20الفندقية.html">Arabic</a>
                             </div>
 
                         </div>
                     </div>
-
                 </div>
 
                 <!--          text-second-logo  -->
@@ -137,7 +143,7 @@
                 <a  href="register-new-guest.html">Register New Guest</a>
             </div>
             <div class="sign btn">
-                <a  href="index.html">Sign in</a>
+                <a  href="sign-in.html">Sign in</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -161,7 +167,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest.html">
+                <a href="my-hotel-guests-report.html">
 
 
                     My Hotel Guests Report
@@ -172,7 +178,7 @@
             </li>
 
             <li>
-                <a href="cities.html">
+                <a href="hotel-cities-report.html">
 
 
                     Hotel Cities Report
@@ -182,7 +188,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms.html">
+                <a href="hotel-rooms-report.html">
 
 
                     Hotel Rooms Report
@@ -242,7 +248,7 @@
             </li>
 
             <li>
-                <a href="chnage-pass.html">
+                <a href="change-hotel-password.html">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
@@ -280,51 +286,170 @@
 
 </section>
 <!-- end of nav-->
-<!-- start of form-->
 
-<!-- end of nav-->
+
+<!-- start of form-->
 <section id="sections-hotel">
     <div class="container">
         <div class="section-back">
-            <a href="about-us.html">Back to Hotel  Sections</a>
+            <a href="hotel-sections.html">Back to Hotel  Sections</a>
         </div>
     </div>
     <div class="container">
         <div class="hotel-info">
-            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
-            >
+            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <a href="#">
-                   Change Hotel password
+                    Hotel Cities Report
                 </a>
             </h3>
 
         </div>
     </div>
 </section>
-<!-- start of form-->
-<section id="form">
+<!--
+
+<section id="sections">
+
+    Your Business Commitment
+    you have determined your business commit
+
+    your goal ( your dream) : xxxx
+
+    your financial goal : xxxx
+
+    registered guests from your hotel number : xxxx
 
 
+
+
+
+    you can increase your hotel profits any time , by registered more guests from your hotel number
+
+    the following table shows your hotel maximum profits  , depending on number of guests that will be registered  from your hotel number
+
+<div class="container">
+    <div class="section-back">
+        <a href="hotel-sections.html">Back to Sections</a>
+    </div>
+    <div class="section-title">
+        <h2><a href="#">
+            My Hotel Info:
+        </a></h2>
+    </div>
+    <div class="hotel-info">
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Hotel Owner Name :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Email : Phone :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Phone :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Birth Date :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Country :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Gender :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Hotel Open Date :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Your Hotel Number :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            You Have Registered as a Guest in Hotel Number :
+            <span>xxxxxx</span>
+        </h3>
+    </div>
+</div>
+</section>
+-->
+<!-- end of form -->
+<!-- end of nav-->
+<!-- Table -->
+<section class="hotel-guest">
     <div class="container">
 
-        <form action="#" class="form">
-            <div class="form-group wow fadeInRight"  data-wow-duration="1s" >
-                <label for="number"></label>
-                <input type="password" class="form-control" id="number" placeholder="Enter Hotel Current  Password">
-            </div>
-            <div class="form-group wow fadeInRight"  data-wow-duration="3s">
-                <label for="password"></label>
-                <input type="password" class="form-control"  id="password" placeholder="Enter  new  password">
-            </div>
-            <div class="form-group wow fadeInRight"  data-wow-duration="4s">
-                <label for="passwordd"></label>
-                <input type="password" class="form-control"  id="passwordd" placeholder="Re-enter  new  password">
-            </div>
-            <button class="change wow fadeInRight"  data-wow-duration="6s"  >change Hotel password</button>
-        </form>
+        <table>
+            <tr>
+
+                <th>Hotel Cities</th>
+                <th>Registered Guests in City</th>
+
+            </tr>
+            <tr>
+                <td>City 1</td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>City 2</td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>City 3</td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>City 4</td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>City 5</td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>City 6</td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>City 7</td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>City 8</td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>City 9</td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>City 10</td>
+                <td></td>
+
+            </tr>
+        </table>
     </div>
 </section>
-<!-- end of form -->
+<!--end of table -->
 <footer>
     <div class="container">
         <div class="copyright">
