--- a/hotel-sections.html
+++ b/hotel-sections.html
@@ -9,16 +9,11 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/cities.css">
-    <style>
-        #sections{
-            padding-top: 40px !important;
-            text-align: left;
-        }
-    </style>
+    <link rel="stylesheet" href="css/about/custom-style.css">
 
 </head>
 <body>
+
 <!-- start of  nav for desktop-->
 <section id="nav">
     <div class="container">
@@ -45,20 +40,21 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="cities.html">English</a>
+                        <a class="lang-text" href="hotel-sections.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="تقرير%20المدن%20الفندقية.html">Arabic</a>
+                            <a class="lang-text" href="من%20نحن.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
+
                 <div class="register btn">
                     <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">Sign in</a>
+                    <a  href="sign-in.html">Sign in</a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -108,19 +104,18 @@
                         <span>Pyramid Challenge</span>
                         <span>Digital Hotels</span>
                     </h2>
-
-
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="cities.html">English</a>
+                            <a class="lang-text" href="hotel-sections.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="تقرير%20المدن%20الفندقية.html">Arabic</a>
+                                <a class="lang-text" href="من%20نحن.html">Arabic</a>
                             </div>
 
                         </div>
                     </div>
+
                 </div>
 
                 <!--          text-second-logo  -->
@@ -143,7 +138,7 @@
                 <a  href="register-new-guest.html">Register New Guest</a>
             </div>
             <div class="sign btn">
-                <a  href="index.html">Sign in</a>
+                <a  href="sign-in.html">Sign in</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -167,7 +162,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest.html">
+                <a href="my-hotel-guests-report.html">
 
 
                     My Hotel Guests Report
@@ -178,7 +173,7 @@
             </li>
 
             <li>
-                <a href="cities.html">
+                <a href="hotel-cities-report.html">
 
 
                     Hotel Cities Report
@@ -188,7 +183,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms.html">
+                <a href="hotel-rooms-report.html">
 
 
                     Hotel Rooms Report
@@ -248,7 +243,7 @@
             </li>
 
             <li>
-                <a href="chnage-pass.html">
+                <a href="change-hotel-password.html">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
@@ -286,170 +281,144 @@
 
 </section>
 <!-- end of nav-->
-
-
 <!-- start of form-->
-<section id="sections-hotel">
-    <div class="container">
-        <div class="section-back">
-            <a href="about-us.html">Back to Hotel  Sections</a>
-        </div>
-    </div>
-    <div class="container">
-        <div class="hotel-info">
-            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <a href="#">
-                    Hotel Cities Report
-                </a>
-            </h3>
-
-        </div>
-    </div>
-</section>
-<!--
-
+<!-- start of form-->
 <section id="sections">
 
-    Your Business Commitment
-    you have determined your business commit
-
-    your goal ( your dream) : xxxx
-
-    your financial goal : xxxx
-
-    registered guests from your hotel number : xxxx
-
-
-
-
-
-    you can increase your hotel profits any time , by registered more guests from your hotel number
-
-    the following table shows your hotel maximum profits  , depending on number of guests that will be registered  from your hotel number
-
-<div class="container">
-    <div class="section-back">
-        <a href="about-us.html">Back to Sections</a>
-    </div>
-    <div class="section-title">
-        <h2><a href="#">
-            My Hotel Info:
-        </a></h2>
-    </div>
-    <div class="hotel-info">
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Hotel Owner Name :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Email : Phone :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Phone :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Birth Date :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Country :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Gender :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Hotel Open Date :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Your Hotel Number :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            You Have Registered as a Guest in Hotel Number :
-            <span>xxxxxx</span>
-        </h3>
-    </div>
-</div>
-</section>
--->
-<!-- end of form -->
-<!-- end of nav-->
-<!-- Table -->
-<section class="hotel-guest">
     <div class="container">
+        <div class="section-title">
 
-        <table>
-            <tr>
+            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+            >
+            <a href="#">
+                Hotel Sections
+                <i class="fas fa-chevron-right"></i>
+            </a>
+       </h2>
 
-                <th>Hotel Cities</th>
-                <th>Registered Guests in City</th>
+        </div>
+        <div class="section-row">
+            <div class="section-field wow fadeInLeft" data-wow-duration="0.3s" data-wow-delay="0.3s">
+               <a href="my-hotel-info.html">
+                <h2>
 
-            </tr>
-            <tr>
-                <td>City 1</td>
-                <td></td>
+                        My Hotel Info
+                        <i class="fas fa-chevron-right"></i>
 
+                </h2>
+               </a>
+            </div>
+            <div class="section-field wow fadeInLeft" data-wow-duration="0.4s" data-wow-delay="0.4s">
+                <a href="my-hotel-guests-report.html">
+                <h2>
 
-            </tr>
-            <tr>
-                <td>City 2</td>
-                <td></td>
+                        My Hotel Guests Report
+                        <i class="fas fa-chevron-right"></i>
 
+                </h2>
+            </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s">
+                <a href="hotel-cities-report.html">
+                <h2>
 
-            </tr>
-            <tr>
-                <td>City 3</td>
-                <td></td>
+                        Hotel Cities Report
+                        <i class="fas fa-chevron-right"></i>
+                </h2>
+            </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="0.6s" data-wow-delay="0.6s">
+                <a href="hotel-rooms-report.html">
+                <h2>
 
+                        Hotel Rooms Report
+                        <i class="fas fa-chevron-right"></i>
 
-            </tr>
-            <tr>
-                <td>City 4</td>
-                <td></td>
+                </h2>
+            </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="0.7s" data-wow-delay="0.7s">
+                <a href="https://www.pyramid-challenge.com/offer-of-the-month">
+                <h2>
 
+                        Offer Of The Month
+                        <i class="fas fa-chevron-right"></i>
 
-            </tr>
-            <tr>
-                <td>City 5</td>
-                <td></td>
+                </h2>
+            </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.8s">
+                <a href="withdraw-profits.html">
+                <h2>
 
+                        Withdraw Profits
+                        <i class="fas fa-chevron-right"></i>
+                </h2>
+            </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
+                <a href="business-commitment.html">
+                <h2>
 
-            </tr>
-            <tr>
-                <td>City 6</td>
-                <td></td>
+                    Your Business Commitment
+                    <i class="fas fa-chevron-right"></i>
 
+                </h2>
+            </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
+                <a href="https://www.pyramid-challenge.com/share-post-via-facebook">
+                <h2>
 
-            </tr>
-            <tr>
-                <td>City 7</td>
-                <td></td>
+                    share post via facebook
+<i class="fas fa-chevron-right"></i>
+                </h2>
+            </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                <a href="https://www.pyramid-challenge.com/share-video-via-facebook">
+                <h2>
 
-            </tr>
-            <tr>
-                <td>City 8</td>
-                <td></td>
+                    share video via facebook
+                        <i class="fas fa-chevron-right"></i>
+                </h2>
+            </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1.1s" data-wow-delay="1.1s">
+                <a href="change-hotel-password.html">
+                    <h2>
 
-            </tr>
-            <tr>
-                <td>City 9</td>
-                <td></td>
+                        Change Hotel Password
+                        <i class="fas fa-chevron-right"></i>
+                    </h2>
+                </a>
+            </div>
 
-            </tr>
-            <tr>
-                <td>City 10</td>
-                <td></td>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1.2s" data-wow-delay="1.2s">
+                <a href="https://www.pyramid-challenge.com/share-us-your-idea ">
+                <h2>
 
-            </tr>
-        </table>
+                    Share us your idea
+                    <i class="fas fa-chevron-right"></i>
+
+                </h2>
+            </a>
+            </div>
+            <div class="section-field  wow fadeInLeft" data-wow-duration="1.3s" data-wow-delay="1.3s">
+                <a href="https://www.pyramid-challenge.com ">
+                <h2>
+
+                    Log Out Hotel Account
+                        <i class="fas fa-chevron-right"></i>
+
+                </h2>
+            </a>
+            </div>
+
+        </div>
     </div>
 </section>
-<!--end of table -->
+<!-- end of form -->
 <footer>
     <div class="container">
         <div class="copyright">
