--- a/sign-in.html
+++ b/sign-in.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/about/custom-style.css">
 
 </head>
 <body>
+
 
 <!-- start of  nav for desktop-->
 <section id="nav">
@@ -40,21 +40,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="about-us.html">English</a>
+                        <a class="lang-text" href="sign-in.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="من%20نحن.html">Arabic</a>
+                            <a class="lang-text" href="تسجيل%20الدخول.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
-
                 <div class="register btn">
                     <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">Sign in</a>
+                    <a  href="sign-in.html">Sign in</a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -106,16 +105,15 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="about-us.html">English</a>
+                            <a class="lang-text" href="sign-in.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="من%20نحن.html">Arabic</a>
+                                <a class="lang-text" href="تسجيل%20الدخول.html">Arabic</a>
                             </div>
 
                         </div>
                     </div>
-
                 </div>
 
                 <!--          text-second-logo  -->
@@ -138,7 +136,7 @@
                 <a  href="register-new-guest.html">Register New Guest</a>
             </div>
             <div class="sign btn">
-                <a  href="index.html">Sign in</a>
+                <a  href="sign-in.html">Sign in</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -162,7 +160,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest.html">
+                <a href="my-hotel-guests-report.html">
 
 
                     My Hotel Guests Report
@@ -173,7 +171,7 @@
             </li>
 
             <li>
-                <a href="cities.html">
+                <a href="hotel-cities-report.html">
 
 
                     Hotel Cities Report
@@ -183,7 +181,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms.html">
+                <a href="hotel-rooms-report.html">
 
 
                     Hotel Rooms Report
@@ -243,7 +241,7 @@
             </li>
 
             <li>
-                <a href="chnage-pass.html">
+                <a href="change-hotel-password.html">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
@@ -282,140 +280,34 @@
 </section>
 <!-- end of nav-->
 <!-- start of form-->
-<!-- start of form-->
-<section id="sections">
+<section id="form">
+    <div class="form-title">
+        <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+            <a href="sign-in.html">       Login To Your Hotel Account
+            </a></h2>
+    </div>
 
     <div class="container">
-        <div class="section-title">
 
-            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
-            >
-            <a href="#">
-                Hotel Sections
-                <i class="fas fa-chevron-right"></i>
+        <form action="#" class="form">
+            <div class="form-group " >
+                <label for="number"></label>
+                <input type="text" class="form-control" id="number" placeholder="Enter your hotel number" required>
+            </div>
+            <div class="form-group ">
+                <label for="password"></label>
+                <input type="password" class="form-control"  id="password" placeholder="Enter your hotel password">
+            </div>
+          <div class="button">
+              <a class="submit " href="hotel-sections.html">Sign In
+                  <i class="fas fa-chevron-right"></i>
+              </a>
+          </div>
+            <a class="forget-pass" href="https://www.pyramid-challenge.com/contact-us">
+                if you forgot your password or your hotel number , click here
             </a>
-       </h2>
+        </form>
 
-        </div>
-        <div class="section-row">
-            <div class="section-field wow fadeInLeft" data-wow-duration="0.3s" data-wow-delay="0.3s">
-               <a href="my-hotel-info.html">
-                <h2>
-
-                        My Hotel Info
-                        <i class="fas fa-chevron-right"></i>
-
-                </h2>
-               </a>
-            </div>
-            <div class="section-field wow fadeInLeft" data-wow-duration="0.4s" data-wow-delay="0.4s">
-                <a href="hotel-guest.html">
-                <h2>
-
-                        My Hotel Guests Report
-                        <i class="fas fa-chevron-right"></i>
-
-                </h2>
-            </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                <a href="cities.html">
-                <h2>
-
-                        Hotel Cities Report
-                        <i class="fas fa-chevron-right"></i>
-                </h2>
-            </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.6s" data-wow-delay="0.6s">
-                <a href="hotel-rooms.html">
-                <h2>
-
-                        Hotel Rooms Report
-                        <i class="fas fa-chevron-right"></i>
-
-                </h2>
-            </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.7s" data-wow-delay="0.7s">
-                <a href="https://www.pyramid-challenge.com/offer-of-the-month">
-                <h2>
-
-                        Offer Of The Month
-                        <i class="fas fa-chevron-right"></i>
-
-                </h2>
-            </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.8s">
-                <a href="withdraw-profits.html">
-                <h2>
-
-                        Withdraw Profits
-                        <i class="fas fa-chevron-right"></i>
-                </h2>
-            </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
-                <a href="business-commitment.html">
-                <h2>
-
-                    Your Business Commitment
-                    <i class="fas fa-chevron-right"></i>
-
-                </h2>
-            </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
-                <a href="https://www.pyramid-challenge.com/share-post-via-facebook">
-                <h2>
-
-                    share post via facebook
-<i class="fas fa-chevron-right"></i>
-                </h2>
-            </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <a href="https://www.pyramid-challenge.com/share-video-via-facebook">
-                <h2>
-
-                    share video via facebook
-                        <i class="fas fa-chevron-right"></i>
-                </h2>
-            </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1.1s" data-wow-delay="1.1s">
-                <a href="chnage-pass.html">
-                    <h2>
-
-                        Change Hotel Password
-                        <i class="fas fa-chevron-right"></i>
-                    </h2>
-                </a>
-            </div>
-
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1.2s" data-wow-delay="1.2s">
-                <a href="https://www.pyramid-challenge.com/share-us-your-idea ">
-                <h2>
-
-                    Share us your idea
-                    <i class="fas fa-chevron-right"></i>
-
-                </h2>
-            </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1.3s" data-wow-delay="1.3s">
-                <a href="https://www.pyramid-challenge.com ">
-                <h2>
-
-                    Log Out Hotel Account
-                        <i class="fas fa-chevron-right"></i>
-
-                </h2>
-            </a>
-            </div>
-
-        </div>
     </div>
 </section>
 <!-- end of form -->
@@ -438,5 +330,10 @@
 <script src="js/jquery.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/app.js"></script>
+<script>
+
+
+
+</script>
 </body>
 </html>
