--- a/التزام العمل.html
+++ b/التزام العمل.html
@@ -368,7 +368,7 @@
 
 <div class="container">
     <div class="section-back">
-        <a href="about-us.html">Back to Sections</a>
+        <a href="hotel-sections.html">Back to Sections</a>
     </div>
     <div class="section-title">
         <h2><a href="#">
