--- a/من نحن.html
+++ b/من نحن.html
@@ -46,7 +46,7 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="about-us.html" >English</a>
+                        <a class="lang-text" href="hotel-sections.html" >English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
@@ -117,7 +117,7 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="about-us.html">English</a>
+                            <a class="lang-text" href="hotel-sections.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
