--- a/register-new-guest.html
+++ b/register-new-guest.html
@@ -294,7 +294,7 @@
                 <input type="text" class="form-control" id="number" placeholder="Enter partner hotel number( who invite you ?) ">
             </div>
 
-            <a href="فورم%20تسجيل%20نزيل%20الجديد.html" class="submit" >Next Step</a>
+            <a href="register-new-guest-2.html" class="submit" >Next Step</a>
         </form>
     </div>
 </section>
